# TutorialMLinSolidMechanics

./: README.md
ffnn_introduction/: README.md  data.py  main.ipynb  main.py  models.py  pyproject.toml
ffnn_introduction/src/tmlsm/: data.py  losses.py  models.py
hyperelasticity/data/: README.md
viscoelasticity/: README.md  data.py  main.py  models.py  plots.py  pyproject.toml
viscoelasticity/src/tmlsm/: data.py  models.py  plots.py
