[project]
name = "tmlsm"
version = "0.1.0"
description = "Tutorial Machine Learning in Solid Mechanics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.0",
    "klax==0.1.3",
    "matplotlib>=3.10.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
